fix toc text wrap

--- a/source/css/_partial/post/actions_desktop.styl
+++ b/source/css/_partial/post/actions_desktop.styl
@@ -2,10 +2,11 @@
   position: fixed
   top: 30vh // 50vh
   right: 2rem
-  display: inline-block
+  display: block
   float: right
   //background: $color-background 
   padding: 2%
+  text-align: right  
   a
     color: inherit
     text-decoration: none
@@ -92,6 +93,8 @@
     clear: both
     text-align: right
     padding-top: 1rem
+    width: 17rem
+    float: right
     a:hover
       color: $color-link
     .toc-level-1
